# PAB_CI_Actions

./: .editorconfig  .gitignore  README.md  pab_ci_actions_release_flow.md  pyproject.toml
.github/actions/assert-repo-clean/: action.yml
.github/actions/job-lint/: action.yml
.github/actions/job-package/: action.yml
.github/actions/job-quality/: action.yml
.github/actions/job-security/: action.yml
.github/actions/r2-upload-object/: action.yml
.github/actions/r2-upload-object/scripts/: r2_upload_object.py
.github/actions/setup-uv/: action.yml
.github/actions/upsert-desktop-release-metadata/: action.yml
.github/actions/upsert-desktop-release-metadata/scripts/: upsert_desktop_release_metadata.py
.github/actions/verify-public-object/: action.yml
.github/actions/verify-public-object/scripts/: verify_public_object.py
.github/workflows/: R2-integration-test.yml  action-self-tests.yml  version-gate.yml
dev-tools/: move-major-tag.sh  prepare-main.sh  tag-semver.sh  verify-tags.sh  version_gate.py
docs/: reusable-workflows.md  versioning-and-pinning-policy.md
tests/: test_actions.py
