[project]
name = "pab-ci-actions-self-tests"
version = "0.0.0"
requires-python = ">=3.13,<3.14"
dependencies = []

[dependency-groups]
test = ["pytest>=8.0", "pyyaml>=6.0"]
quality = ["ruff>=0.11", "mypy>=1.15"]
security = ["bandit>=1.8", "pip-audit>=2.8"]

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff.lint]
ignore = ["E701", "E702"]

[tool.mypy]
ignore_missing_imports = true
